# DukeForeverSDK

./: .gitignore  CMakeLists.txt  MacFiles.txt
3DRDebugLib/: CMakeLists.txt
3DRDebugLib/Lib/: 3DRDebugLib.lib
BugHandler/: CMakeLists.txt
BugHandler/Lib/: BugHandler.lib
Core/Inc/: Core.h  FConfigCacheIni.h  FFileManagerGeneric.h  FFileManagerWindows.h  FOutputDeviceFile.h  UnArc.h  UnBuild.h  UnClass.h  UnCorObj.h  UnFile.h  UnLinker.h  UnMath.h  UnMem.h  UnName.h  UnNames.h  UnObjBas.h  UnObjVer.h  UnScript.h  UnStack.h  UnTemplate.h  UnType.h  UnVcWin32.h  dnFileMgrDLC.h  dnRemap.h
Core/Src/: UnMisc.cpp
D3DDrv9/: CMakeLists.txt
D3DDrv9/Lib/: D3DDrv9.lib
Editor/: CMakeLists.txt
Editor/Inc/: EditorClasses.h
Editor/Lib/: Editor.lib
Editor/Src/: EditorPrivate.h
Engine/: CMakeLists.txt
Engine/Inc/: EngineClasses.h
Fire/: CMakeLists.txt
Fire/Lib/: Fire.lib
FreeType/builds/wince/vc2005-ce/: freetype.vcproj
FreeType/builds/wince/vc2008-ce/: freetype.vcproj
Meqon/lib/: meqon.lib
MilesAudio/: CMakeLists.txt
MilesAudio/Lib/: MilesAudio.lib
MilesAudio/Mss7/: CMakeLists.txt
NullRenDev/: CMakeLists.txt
NullRenDev/Lib/: NullRenDev.lib
System/: ChallengeInfo.ini  default.ini  defprogress.ini  defuser.ini  maps.ini
UCC/: CMakeLists.txt
UCC/Src/: UCC.cpp
UWindow/: CMakeLists.txt
UWindow/Inc/: UWindowClasses.h
UWindow/Lib/: UWindow.lib
dnAI/: CMakeLists.txt
dnAI/Inc/: dnAIClasses.h
dnAI/Lib/: dnAI.lib
dnAnimation/: CMakeLists.txt
dnAnimation/Lib/: dnAnimation.lib
dnCommon/: CMakeLists.txt
dnCommon/Lib/: dnCommon.lib
dnGame/: CMakeLists.txt
dnGame/Inc/: dnGameClasses.h
dnGame/Lib/: dnGame.lib
dnVehicles/: CMakeLists.txt
dnVehicles/Inc/: dnVehiclesClasses.h
dnVehicles/Lib/: dnVehicles.lib
